# Real-Time-Drift-Aware-ML-PLatform

./: .env.example  .pre-commit-config.yaml  .python-version  CONTRIBUTING.md  Makefile  README.md  pyproject.toml
mlops-drift-platform/: .gitignore  CODE_OF_CONDUCT.md  README.md  pyproject.toml
mlops-drift-platform/data/sample/: events.csv
mlops-drift-platform/docs/: architecture.md  decisions.md  runbook.md
mlops-drift-platform/docs/screenshots/: README.md
mlops-drift-platform/infra/terraform/: main.tf  outputs.tf  variables.tf
mlops-drift-platform/infra/terraform/env/: aws.auto.tfvars.example  gcp.auto.tfvars.example
mlops-drift-platform/manifests/argo-apps/: monitoring.yaml
mlops-drift-platform/manifests/k8s/base/: feature-store-deployment.yaml  monitoring-cronjob.yaml  serving-deployment.yaml
mlops-drift-platform/services/common/: __init__.py  config.py  data.py  schemas.py  utils.py
mlops-drift-platform/services/common/tests/: test_schemas.py
mlops-drift-platform/services/feature_service/: __init__.py
mlops-drift-platform/services/feature_service/feast_repo/: __init__.py  entities.py  feature_store.yaml  feature_views.py  materialize.py
mlops-drift-platform/services/feature_service/ingestion/: batch_job.py  stream_job.py
mlops-drift-platform/services/model_training/: params.yaml  train.py
mlops-drift-platform/services/model_training/tests/: test_train.py
mlops-drift-platform/services/monitoring/alerting/: rules.yml
mlops-drift-platform/services/monitoring/drift/: __init__.py
mlops-drift-platform/services/monitoring/tests/: test_drift.py
mlops-drift-platform/services/producer/: Dockerfile
mlops-drift-platform/services/producer/tests/: test_generator.py
mlops-drift-platform/services/serving/: Dockerfile
mlops-drift-platform/services/serving/app/: __init__.py  inference.py  main.py  metrics.py  shadow.py
mlops-drift-platform/services/serving/tests/: test_shadow.py
(+122 files in other folders)
